--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.9.4",
     "react-to-print": "^3.2.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
