--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
