--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
