--- a/Warehouse.ini
+++ b/Warehouse.ini
@@ -308,3 +308,7 @@ LuongNghiepVu="
 4. Soạn hàng xong, thẻ chuyển sang 'Ready for Pickup'.
 5. Chuyền may ra nhận hàng. Nếu nhận đủ, thẻ chuyển sang 'Completed'. Nếu nhận một phần, thẻ chuyển sang 'Partially Issued'.
 6. Nếu yêu cầu bị hủy, thẻ sẽ được chuyển sang cột 'Cancelled'."
+
+[RelaxFabricFormPage]
+ChucNang="Giao diện để cập nhật tiến trình xả vải cho các cuộn vải trong kho."
+BocucUI="
