--- a/_BufferAndSupermarket.ini
+++ b/_BufferAndSupermarket.ini
@@ -56,19 +56,19 @@ Dưới đây là chi tiết mục tiêu cho từng màn hình.
 
 ---
 
+Thiết kế màn hình scan QR code, giả lập data cho chức năng quét luôn
+
 ### **2. Màn hình Buffer Progress and Status Report (Báo cáo Tồn kho & Trạng thái Buffer)**
 
 *   **Mục Tiêu Chính:** Cung cấp một cái nhìn tổng quan về tất cả các bó vải hiện đang được quản lý bởi Buffer, bao gồm cả những bó đang ở công đoạn trang trí và những bó đang lưu kho tạm.
 *   **Đối Tượng Sử Dụng:** Tổ trưởng Buffer, Quản lý sản xuất.
 *   **Các Chức Năng Cần Có:**
-    *   **Hiển thị dạng bảng (Table View):** Liệt kê chi tiết các bó vải với các cột thông tin: Mã bó, Mã PO, Trạng thái hiện tại (ví dụ: "At Heat Press", "In Temp WH", "Returned from Embroidery"), Thời gian tại trạng thái hiện tại.
+    *   **Hiển thị dạng bảng (Table View):** Liệt kê chi tiết các bó vải với các cột thông tin: Mã PO, Mã bó, color, quality, Trạng thái hiện tại (ví dụ: "At Heat Press", "In Temp WH", "Returned from Embroidery"), Thời gian tại trạng thái hiện tại.
     *   **Bộ lọc và tìm kiếm mạnh mẽ:** Cho phép lọc theo Mã PO, Mã hàng, Trạng thái, hoặc tìm kiếm theo Mã bó cụ thể.
     *   **Cảnh báo trực quan:** Tự động tô màu (ví dụ: màu đỏ) cho các bó vải tồn kho quá lâu so với thời gian quy định, giúp quản lý nhận biết và xử lý kịp thời.
     *   **Tổng hợp theo PO:** Gom nhóm các bó vải theo từng PO để dễ dàng theo dõi tiến độ hoàn thành của cả đơn hàng.
 *   **Giá Trị Mang Lại:**
-    *   Minh bạch hóa toàn bộ lượng hàng đang xử lý (WIP) tại khu vực Buffer và trang trí.
     *   Giúp quản lý trả lời nhanh chóng câu hỏi: "Bó vải X của đơn hàng Y đang ở đâu?".
-    *   Phát hiện sớm các bó bị "bỏ quên" hoặc di chuyển chậm.
 
 ---
 
