--- a/_Warehouse.ini
+++ b/_Warehouse.ini
@@ -54,3 +54,31 @@ Description
 - Nút Complete: Sau khi ấn nút, dữ liệu sẽ được lưu vào hệ thống và chuyển về màn hình Packing List Management.
 
 # 
+
+dashboard để theo dõi quá trình chuẩn bị vải (Fabric Preparation), 
+
+→ Mục đích: Xem nhanh tình trạng vải trong từng JOB đang ở giai đoạn nào: Đang chuẩn bị (Preparation), Đang QC, Đang thư giãn (Relaxation), Đang cấp phát (Issued), Đang cắt (Cutting).
+
+
+thư giãn vải (Fabric Relaxation): theo dõi khối lượng vải đã thư giãn theo thời gian (ngày/tuần).
+
+
+
+và hiệu suất của cả Preparation & KANBAN.
+3️⃣ KANBAN Flow & Status
+
+Biểu đồ gợi ý:
+
+Table or KPI card: tổng số KANBAN cards đang “Preparation”, “Relaxation”, “Issued”, “Cutting”.
+
+→ Mục đích: Theo dõi dòng chảy vật liệu trong hệ thống KANBAN, tránh tồn kho hoặc thiếu hụt.
+
+Mục tiêu chính của dashboard
+Theo dõi tiến độ & khối lượng công việc trong từng giai đoạn (Preparation, Relaxation).
+Giám sát hiệu suất quy trình và tuân thủ KANBAN (pull system).
+Phát hiện tắc nghẽn (bottlenecks) hoặc sự chậm trễ trong chuẩn bị vải.
+Đo lường KPIs như thời gian chu kỳ, năng suất, tỷ lệ hoàn thành đúng hạn, v.v.
+
+
+
+
