--- a/Warehouse.ini
+++ b/Warehouse.ini
@@ -150,3 +150,16 @@ LuongNghiepVu=
 - ScanQRWarehouseLocation (Put Away): Đầu tiên, quét một vị trí. Sau đó, quét một hoặc nhiều mặt hàng chưa có vị trí. Cuối cùng, xác nhận để gán tất cả các mặt hàng đã quét vào vị trí đã quét.
 - ScanQRFabric, ScanQRAccessory, ScanQRPackaging (Transfer): Đầu tiên, quét một mặt hàng đã có vị trí. Sau đó, quét một vị trí mới để di chuyển mặt hàng đến đó.
 - ScanQRIssueRequest (Picking/Issuing): Đầu tiên, quét mã QR của một yêu cầu xuất kho. Hệ thống hiển thị danh sách lấy hàng. Sau đó, người dùng quét mã QR của các mặt hàng để đáp ứng yêu cầu, và hệ thống cập nhật số lượng đã lấy.
+
+[RelaxTimeStandardPage]
+ChucNang=Quản lý thời gian xả vải chuẩn cho từng loại vải.
+BocucUI=
+- Header "Relax Time Standard Management".
+- Khu vực bộ lọc cho "Fabric Type".
+- Bảng hiển thị các tiêu chuẩn thời gian xả với các cột: "Fabric Type", "Relax Time (hours)".
+- Các hành động trên bảng: "Add New Standard", "Edit", "Delete".
+- Modal để thêm hoặc chỉnh sửa tiêu chuẩn thời gian xả.
+LuongNghiepVu=
+- Xem danh sách các tiêu chuẩn thời gian xả hiện có.
+- Thêm mới tiêu chuẩn thời gian xả cho các loại vải khác nhau.
+- Chỉnh sửa hoặc xóa các tiêu chuẩn hiện có.
