Save all pending changes

--- a/docs/MoM.ini
+++ b/docs/MoM.ini
@@ -80,205 +80,83 @@ Meeting Roles: The Tech Lead acts as the host during meetings.
 Communication Channels: There is a "Developers only" group created by Mr. Tony Toan.
 
 
+Date: 5/12/2025
 
-Requirement background
+"InlineFBRollDataDtl → chi tiết từng cây vải (mã cây, màu, khổ, mét, lot). Đây là ""master"" cho Roll.
 
-As a Warehouse manager, Warehouse import staffs, I want to have packing list page created, so that I can view, import packing list, and print QR code after I successfully import packing list by T-Pro.
+InlineFBRollRelx → liên kết cây vải với các phiếu giao/phiếu xuất khác.
 
-Requirement description
+InlineFBRollOutput → xuất kho (khi phát vải sang bộ phận cắt).
 
-Mockup
+InlineFBRollInspt → kết quả kiểm vải (inspection result cho từng cây).
 
+InlineFBRollInsptDefct → chi tiết lỗi vải (nếu có, gắn với Inspt).
 
+InlineFBRollLocHis → lịch sử vị trí cây vải trong kho (di chuyển từ kệ này qua kệ khác).
 
+InlineFBWHPkList → danh sách xuất kho (pick list).
 
-Mockup Description
-Name
+👉 Luồng: Nhập cây vải → Kiểm → Lưu kho → Xuất kho theo pick list → Ghi log lịch sử di chuyển."
 
-Type
+"InlineFBWHPkList → liên quan đến phiếu xuất để QC có thể đối chiếu.
 
-Data
+InlineFBRollDataDtl → cây vải gốc.
 
-Description
+InlineFBRollInspt → thông tin kiểm vải (pass/fail, grade).
 
-"Packing List Management" 
+InlineFBRollInsptDefct → chi tiết lỗi từng cây.
 
-Title
+InlineFBDefect → danh mục lỗi (master defect list).
 
+👉 Luồng: Khi nhập kho, QC ghi nhận lỗi theo danh mục → kết quả gắn vào RollInspt → ảnh hưởng tới việc duyệt/cho phép xuất kho."
 
+"CuttingPlanning → kế hoạch cắt (nhu cầu vải cho chuyền/bộ phận cắt).
 
-Title of the page
+InlineFBRollOutput → xuất kho cho lệnh cắt.
 
-Import Packing List
+InlineFBWHPkList → pick list để gom vải cho kế hoạch.
 
-Button
+InlineFBRollRelx → mapping cây vải nào đã cấp phát cho kế hoạch nào.
 
-
-
-Open popup to import packing list
-
-Search Item
-
-Search bar
-
-PO, Item color, Color, Lot, roll name
-
-Users can type in the characters which match defined data. The information is displayed with matching search criteria
-
-Print status
-
-Dropdown list
-
-Printed, Not Printed
-
-Find based on QR code Printed status
-
-QC Status
-
-Dropdown list
-
-Passed, Failed, Not QC
-
-Find based on QC status
-
-Search
-
-Button
+👉 Luồng: Kế hoạch cắt tạo nhu cầu → Pick list xuất kho → Output cấp phát → Relx ghi nhận cây nào đã phát → hiển thị Kanban số lượng còn/đã phát."
 
 
+Date: 6/12/2025
 
-User can press enter or click this search button
+https://github.com/AGWA/git-crypt/releases/tag/0.7.0
 
-Item list
+git crypt init
 
-Data grid
+.gitattributes
+server.js filter=git-crypt diff=git-crypt
+src/** filter=git-crypt diff=git-crypt
 
-Invoice No, PO Number, Item code, Color, Quantity, Role No., Lot No., Color code, Color, Yards, Net weight, gross weight, width, qc status, QR Code Printed
+Kiểm tra và Commit: git crypt status
 
-Display information of fabrics rolls:
-
-Checkboxes 
-Invoice Number
-PO Numbers
-Item code
-Color code
-Color
-Roll No.
-Lot no.
-Yards
-Net weight
-gross weight
-Width
-QC Check
-QR code printed
-Description
-Action (buttons)
-Print/Re-print
-
-Button
+Mở khóa cho đồng đội:
+Xuất khóa ra file: git crypt export-key /path/to/my-secret-key.key
+Gửi file my-secret-key.key này cho đồng nghiệp
+Đồng nghiệp tải code về, sau đó chạy lệnh mở khóa: git crypt unlock /path/to/my-secret-key.key
 
 
+Vào trang 
+Scan barcode:
+hiển thị thông tin: JOB NO, PO NO, Bundle NO, đang bị cái gì, recomend, record date, đã bao lâu chưa sửa, ngày sửa, status (chưa sửa, đang sửa, đã sửa), thời gian ghi nhận đang sửa, thời gian sửa xong,thời gian sửa (= thời gian sửa xong - thời gian ghi nhận đang sửa)
 
-User can print QR code by push this button. Rules to Print
-PO Numbers
-Item code
-Color code
-Lot no.
-Roll No.
-Yards
-Net weight
-gross weight
-Invoice Number
-Can multiple select rolls for mass printing.
-Columns
+list
 
-Button
+update:
+create: ghi description, đề nghị làm gì, upload hình chụp, bấm create
 
 
+sửa lại trang Repair Request List: 
+Bảng hiển thị thông tin: JOB NO, PO NO, Bundle NO, đang bị cái gì, đề nghị làm gì, status ( chưa sửa, đang sửa, đã sửa), record date (thời gian ghi nhận),  thời gian ghi nhận đang sửa, thời gian sửa xong, thời gian sửa (= thời gian sửa xong - thời gian ghi nhận đang sửa)
+Đổi nút Create New Request thành Scan barcode, khi ấn vào Scan barcode sẽ hiện giao diện scan barcode, giả lập scan barcode thành công, scan xong sẽ hiện thị 1 form để tạo request repair, form có các thông tin: JOB NO, PO NO, Bundle NO, đang bị cái gì, đề nghị làm gì, upload hình chụp hoặc chụp trực tiếp, bấm create để tạo request repair
 
-Users can choose additional attributes to display
+Khi mở giao diện scan barcode, cho người dùng chọn 3 kiểu scan khác nhau:
+scan tạo request repair
+scan cập nhật request repair: scan sẽ hiển thị các thông tin của request repair, người dùng chỉ cần ấn bắt đầu sửa để bắt đầu sửa.
+scan hoàn thành request repair: scan sẽ hiển thị các thông tin của request repair, người dùng chỉ cần ấn hoàn thành để hoàn thành request repair.
 
-Pagination
+trong bảng repair request list, bỏ tùy chọn update status trong action, khi ấn vào view details sẽ hiển thị các thông tin của request repair. điều chỉnh giao diện và dữ liệu thành tiếng anh.
 
-Pagination
-
-
-
-Users can choose number of items to display in the first page.
-Users can move between pages to view more information
-Acceptance Criteria
-
-Import Packing list button behavior
-Given: I can access to Fabric Packing List management page.
-When: I push the Import Packing List button.
-Then: Import packing list popup must appear after I push the button without delay.
-Search behavior:
-Normal flow;
-Given: I can access to Fabric Packing List management page.
-When: I input PO no/Color code/color/Item code/Lot no.
-And: I push the Search button.
-Then: Search results are displayed in data grid below. named Item list.
-Normal flow 2:
-Given: I select filters (Print Status, QC Status) and click Search,
-Then: the result list updates instantly without reloading the entire page.
-Normal flow 2:
-Given: I input no filters,
-Then: Search button is disabled.
-Exceptional flow 1:
-Given: I can access to Fabric Packing List management page.
-When: I input PO no/Color code/color/Item code/Lot no which do not have been input or recorded.
-And: I push the Search button.
-Then: "No results found" is displayed in Item list.
-Exceptional flow 2:
-Given: I can access to Fabric Packing List management page.
-When: I input PO no/Color code/color/Item code/Lot no which.
-And: I choose criteria such as QR printed or QC check which are not matched with my input criteria.
-And: I push the Search button.
-Then: "No results found" is displayed in Item list.
-QR Printed status behavior:
-Normal Flow 1:
-Given: I can access to Fabric Packing List management page.
-When: I have fabric rolls which have not been printed its QR code.
-Then: I can view "Not printed" status.
-And: I can Print QR code for this items.
-Or: the checkbox is enabled so that I can choose to Print all button.
-Normal flow 2:
-Given: I have items in need of QR printing.
-When: I have not choose any items to print.
-Then:  Print all button is disabled.
-Alternative flow:
-Given: I can access to Fabric Packing List management page.
-When: I have fabric rolls which have been printed its QR code.
-Then: I can view "Printed" status.
-And: I can Re-print QR code for this items.
-Exceptional Flow:
-Given the QR printing service fails (e.g., printer offline),
-Then the system should show an error notification and allow Re-print retry without data loss.
-Pagination behavior:
-Normal Flow 1:
-Given: I can access to Fabric Packing List management page.
-And: The default value for the displayed rows is 20.
-When: I have records from input Input Packing List.
-And: The records are over the displayed rows per page.
-Then: I can view more page to choose.
-Normal flow 2:
-Given: I can access to Fabric Packing List management page.
-And: The default value for the displayed rows is 20.
-When: I have records from input Input Packing List.
-And: The records are over the displayed rows per page.
-Then: I can choose different number for displayed rows by pagination dropdown list.
-Normal flow 3:
-Given: I change the “Rows per page” dropdown,
-Then: the system must persist my selection (e.g., 10, 20, 50) for the next session.
-Import Validation
-Normal Flow 1:
-Given: I upload a Packing List file,
-When: the file contains duplicate or invalid entries,
-Then: the system must show a clear validation summary indicating rows with errors and prevent partial imports.
-normal Flow 2:
-Given: I import a valid file,
-When: the import completes,
-Then: I should receive a success message with counts: Total / Imported / Failed / Duplicated.
-Error Handling
-Given: I lose connection during import or print,
-Then: the system must not lose my uploaded file or selected items; a retry or “Resume” option should appear.
