--- a/docs/MoM.ini
+++ b/docs/MoM.ini
@@ -160,3 +160,17 @@ scan hoàn thành request repair: scan sẽ hiển thị các thông tin của r
 
 trong bảng repair request list, bỏ tùy chọn update status trong action, khi ấn vào view details sẽ hiển thị các thông tin của request repair. điều chỉnh giao diện và dữ liệu thành tiếng anh.
 
+
+==== MoM 9/12 ====
+
+Khi người dùng ở tab nào (fabric, accessory, packaging), thì chỉ cho phép add location với purpose đó.
+
+add location: phần warehouse biến thành dropdown để chọn warehouse.
+
+chuyển nút create warehouse và nút add location xuống phần chọn tab fabric, accessory, packaging.
+
+
+
+
+
+
