--- a/docs/MoM.ini
+++ b/docs/MoM.ini
@@ -163,14 +163,29 @@ trong bảng repair request list, bỏ tùy chọn update status trong action, k
 
 ==== MoM 9/12 ====
 
-Khi người dùng ở tab nào (fabric, accessory, packaging), thì chỉ cho phép add location với purpose đó.
+- Khi người dùng ở tab nào (fabric, accessory, packaging), thì chỉ cho phép add location với purpose đó, phần purpose đổi từ dropdown thành text.
+- add location: phần warehouse biến thành dropdown để chọn warehouse.
+- chuyển nút create warehouse và nút add location xuống phần chọn tab fabric, accessory, packaging.
 
-add location: phần warehouse biến thành dropdown để chọn warehouse.
+- thêm tính năng sửa, xóa, enabled/disabled warehouse.
 
-chuyển nút create warehouse và nút add location xuống phần chọn tab fabric, accessory, packaging.
+- không cần hiển thị state/location cho warehouse. 
+- đảm bảo đồng nhất cột với location nữa, nghĩa là cột QR status thì warehouse sẽ trống.
+- chỉ cho thanh đổi trạng thái enabled/disabled khi người dùng ấn vào edit, không cho thay đổi ở ngoài.
+- không cho edit purpose trong edit warehouse.
+
+- chuyển nút create warehouse lên trên bên phải dropdown chọn factory.
+- Purpose trong form create new warehouse cho chọn 4 option: fabric, accessory, packaging, temp warehouse.
+
+- hiện thị thông tin enabled/disabled của warehouse ra ngoài trong tab location.
+
+- Rule: chỉ được disabled warehouse hoặc location khi occupancy = 0. nếu vi phạm sẽ thông báo lỗi.
+- trong add location form, dropdown warehouse chỉ hiển thị danh sách warehouse đang có trong hệ thống. 
+
+- Rule: chỉ được delete warehouse hoặc location khi occupancy = 0. nếu vi phạm sẽ thông báo lỗi.
 
 
-
-
-
-
+FAC_Location Management_Create new warehouse
+FAC_Location Management_View warehouse list
+FAC_Location Management_Update warehouse information
+FAC_Location Management_Delete warehouse
