--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
