--- a/docs/MoM.ini
+++ b/docs/MoM.ini
@@ -189,3 +189,23 @@ FAC_Location Management_Create new warehouse
 FAC_Location Management_View warehouse list
 FAC_Location Management_Update warehouse information
 FAC_Location Management_Delete warehouse
+
+==== MoM 10/12 ====
+
+total yard: > 1000, check 3%, nếu 3% bị lỗi thì check tiếp 3% khác.
+total yard: < 1000, check 100%
+
+Không cho A1A chọt vào database, nhưng sẽ cung cấp API cho A1A để sử dụng.
+
+
+
+
+
+
+
+
+
+
+
+
+
