--- a/docs/MoM.ini
+++ b/docs/MoM.ini
@@ -223,3 +223,43 @@ sẽ có 1 nút, khi ấn vào sẽ hiện popup Recent Scans
 giao diện scan là màn hình camera để người dùng đặt barcode vào là chạy á
 
 bỏ lựa chọn dùng manual đi 
+
+màn hình scan barcode không có lưới, để nền đen được không
+
+
+ở màn hình Packing List Management, thêm 1 yêu cầu cho phần chọn tất cả:
+Khi ấn vào checkbox chọn tất cả, nếu mà bảng có dòng với status not printed và dòng với status printed thì chỉ chọn những dòng not printed. khi ấn xong thì sẽ không cho phép người dùng nhấn vào dòng với status printed
+Khi ấn vào checkbox chọn tất cả, nếu mà bảng chỉ có dòng với status printed thì sẽ chọn tất cả bảng
+
+vẫn cho phép chọn từng dòng (printed và not printed) chứ
+
+khi ấn print selected, thì thay đổi status của những dòng đã chọn thành printed luôn ik
+
+- BA cần có:
+domain
+change request
+stakeholder collaboration
+requirement
+solution
+value
+
+object làm việc là gì
+
+khi nhận 1 yêu cầu từ phía khách hàng, phải hỏi lại: tại sao anh chị yêu cầu cái đó, impact là gì, ai là người cần, làm như thế nào.
+
+Cách lấy yêu cầu:
+- Interview: Cần nhiều thời gian chuẩn bị
+- Workshop: Cần nhiều thời gian chuẩn bị
+- Prototype
+- Q&A: Nhanh gọn, tiết kiệm thời gian cho đôi bên, nhưng cần hiểu rõ yêu cầu, chỉ hỏi những cái không biết
+- Shadowing: quan sát người khác làm việc trên hệ thống, áp dụng đối với hệ thống lớn
+
+
+Current State: hiện trạng của hệ thống
+Future State: những mong muốn của khách hàng, sự cải thiện
+Gap Analysis: Value, Risk, Change (Future khác gì với Current)
+
+
+----- Viết error codes và response messages ------
+dựa vào thư mục warehouse, tạo cho tôi chi tiết, đầy đủ nhất có thể bảng error codes và response messages của hệ thống fabric warehouse, accessory warehouse, packaging warehouse, gồm các cột: error code, response message, business scenario, description
+
